# replicating-sutra-tensor-op-rnns-as-a-compilation-target-2

./: .gitignore  CLAUDE.md  FINDINGS.md  README.md  SKILL.md  devlog.md  download_paper.py  paper.json  queue.md
.github/workflows/: package.yml  pages.yml
notes/: claims.md  sources.md
replication/sutra-replication-package/: README.md  REPRODUCE.md  SKILL.md  SYNTAX.md
replication/sutra-replication-package/examples/: _smoke_test.py  _su_harness.py  analogy.su  analogy_minilm.su  analogy_mxbai.su  atman.toml  axon_demo.su  axon_escape_demo.su  class_static_dispatch.su  class_with_fields.su  classes_demo.su  classifier.su  do_while_adder.su  fuzzy_branching.su  fuzzy_dispatch.su  hello_world.su  imperative_reversible.su  king_queen_naive.su  knowledge_graph.su  logical_connectives.su  nearest_phrase.su  parse_int2.su  predicate_lookup.su  protein_record.su  review_demo.su  role_filler_record.su  rotation_book_catalog.su  rotation_hashmap.su  rotation_record.su  sequence.su  string_demo.su  tensor_ops.su  tutorial.su  void_method_demo.su  wait_keyword_demo.su
replication/sutra-replication-package/experiments/: crosstalk_chain.py  crosstalk_chain_results.json  differentiable_training.py  (+14 more)
replication/sutra-replication-package/sdk/sutra-compiler/: LICENSE  README.md  pyproject.toml
replication/sutra-replication-package/sdk/sutra-compiler/sutra_compiler/: __init__.py  __main__.py  ast_nodes.py  axon_keys.py  cached_compile.py  codegen.py  codegen_base.py  codegen_pytorch.py  diagnostics.py  fv.py  fv_obligation_checker.py  fv_poly_bound.py  inliner.py  lexer.py  loop_capture.py  loop_desugar.py  multi_process.py  parser.py  promise_desugar.py  review.py  simplify.py  simplify_egglog.py  stdlib_loader.py  sutradb_embedded.py  trace.py  validator.py  workspace.py
replication/sutra-replication-package/sdk/sutra-compiler/sutra_compiler/stdlib/: README.md  axons.su  embed.su  javascript_object.su  javascript_primitives.su  logic.su  math.su  memory.su  modulus.su  numbers.su  promises.su  rotation.su  similarity.su  strings.su  tensor.su  vectors.su
replication/sutra-replication-package/sdk/sutra-compiler/tests/: test_await_substrate_pure.py  test_axon_device_coherence.py  test_axon_keys.py  test_axon_project.py  test_branchless_loop.py  test_cached_compile.py  test_codegen.py  test_codegen_pytorch.py  test_corpus.py  test_fv_general_checker.py  test_fv_kleene_grid_exactness.py  test_fv_poly_obligation_checker.py  test_fv_public_api.py  test_fv_termination.py  test_implicit_loop_desugar.py  test_inliner.py  test_lexer.py  test_loop_capture.py  test_loop_function_decl.py  test_multi_process_runtime.py  test_parser.py  test_rotation_prewarm.py  test_simplify.py  test_simplify_egglog.py  test_simplify_egglog_cse.py  test_stdlib_loader.py  test_substrate_leak_sweep.py  test_sutradb_embedded.py  test_torch_compile_wrap.py  test_transcendentals.py  test_vector_literal.py  test_workspace.py
replication/sutra-replication-package/sdk/sutra-compiler/tests/corpus/invalid/: 01_var_with_type.su  02_missing_semicolon.su  03_unterminated_string.su  04_unclosed_brace.su  05_pipe_forward.su  06_string_literal_cast.su  07_public_private_conflict.su  08_unclosed_paren.su  09_unterminated_block_comment.su  10_unsafe_cast_missing_type.su  11_casing_drift.su  12_if_without_parens.su  13_wait_never_assigned.su  14_wait_outside_init.su  15_wait_top_level.su  16_wait_var_inferred.su  17_class_extends_unknown.su  18_class_duplicate.su  19_class_with_body.su  20_class_no_extends.su  21_method_reads_file_scope.su
replication/sutra-replication-package/sdk/sutra-compiler/tests/corpus/valid/: 01_primitive_declarations.su  02_functions.su  03_methods.su  04_operators.su  05_generics.su  06_control_flow.su  07_casts.su  08_string_interpolation.su  09_top_level_execution.su  10_try_catch.su  11_comments.su  12_method_chains.su  13_arithmetic.su  14_logical.su  15_four_state_conditional.su  16_nested_expressions.su  17_assignment_forms.su  18_nested_blocks.su  19_booleans_and_literals.su  20_kitchen_sink.su  21_class_with_methods.su  21_permutation_type.su  22_array_literal.su  22_class_with_fields.su  23_subscript_access.su  24_map_literal.su  25_char_literal.su  26_fuzzy_literal.su  27_string_auto_embed.su  28_trit_literal.su  29_unknown_literal.su  30_imaginary_literal.su  31_complex_type.su  32_logical_operators.su  33_equality_operator.su  34_defuzzify.su  35_derived_logic.su  36_complex_multiplication.su  37_comparison_operators.su  async_promise_basic.su  (+15 more)
replication/sutra-replication-package/sutraDB/: Cargo.toml  LICENSE
replication/sutra-replication-package/sutraDB/sutra-core/: Cargo.toml
replication/sutra-replication-package/sutraDB/sutra-core/benches/: triple_insert.rs
replication/sutra-replication-package/sutraDB/sutra-core/src/: config.rs  error.rs  id.rs  jsonld.rs  lib.rs  ntriples.rs  persistent.rs  pseudotable.rs  rdfxml.rs  store.rs  temporal.rs  triple.rs  turtle.rs
replication/sutra-replication-package/sutraDB/sutra-core/tests/: integration.rs
replication/sutra-replication-package/sutraDB/sutra-ffi/: Cargo.toml
replication/sutra-replication-package/sutraDB/sutra-ffi/src/: lib.rs
replication/sutra-replication-package/sutraDB/sutra-hnsw/: Cargo.toml
replication/sutra-replication-package/sutraDB/sutra-hnsw/benches/: hnsw_search.rs
replication/sutra-replication-package/sutraDB/sutra-hnsw/src/: edges.rs  error.rs  index.rs  lib.rs  node.rs  registry.rs  vector.rs
replication/sutra-replication-package/sutraDB/sutra-hnsw/tests/: integration.rs
replication/sutra-replication-package/sutraDB/sutra-sparql/: Cargo.toml
replication/sutra-replication-package/sutraDB/sutra-sparql/benches/: sparql_query.rs
replication/sutra-replication-package/sutraDB/sutra-sparql/examples/: demo.rs
replication/sutra-replication-package/sutraDB/sutra-sparql/src/: error.rs  executor.rs  health.rs  lib.rs  parser.rs  planner.rs
replication/sutra-replication-package/sutraDB/sutra-sparql/tests/: integration.rs  stress.rs
replication_target/source/: paper.tex  paper.tex.body
scripts/: run.py
(+12 files in other folders)
