[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sutra-dev"
version = "0.7.0"
description = "Compiler for the Sutra programming language — tensor ops on frozen-LLM embedding vectors."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "Emma Leonhart" },
]
keywords = [
  "compiler",
  "embeddings",
  "vector-symbolic",
  "vsa",
  "hyperdimensional",
  "pytorch",
  "rotation-binding",
  "sutra",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Compilers",
]
dependencies = [
  "numpy>=1.26",
]

[project.optional-dependencies]
# torch is needed for --emit, --run, and --run-viz (the codegen produces
# self-contained PyTorch source). Install with: pip install sutra-dev[runtime]
runtime = [
  "torch>=2.1",
]
# TypeScript→Sutra transpiler. `pip install sutra-dev[ts]` pulls in
# the working ts2su CLI from the sister package, so the recommended
# way to get a complete Sutra dev environment for browser-layer work
# is `pip install sutra-dev[runtime,ts]`.
ts = [
  "sutra-from-ts>=0.1.0",
]
# Formal-verification tooling (`from sutra_compiler import fv`): the
# polynomial-obligation checker + Kleene-fragment equivalence decision
# procedure. Needs sympy for exact closed-form bounds + polynomial identity.
# Install with: pip install sutra-dev[fv]
fv = [
  "sympy>=1.12",
]
# Dev tools for working on the compiler itself.
dev = [
  "pytest>=7",
  "pytest-cov",
  # sympy backs the formal-verification polynomial-obligation checker
  # (sutra_compiler/fv_poly_bound.py): exact closed-form range bounds on
  # the reduced Kleene branch polynomials. Test/checker tooling, not on
  # the runtime hot path.
  "sympy>=1.12",
]

[project.scripts]
sutrac = "sutra_compiler.__main__:main"

[project.urls]
Homepage = "https://sutra.emmaleonhart.com"
Repository = "https://github.com/EmmaLeonhart/Sutra"
Issues = "https://github.com/EmmaLeonhart/Sutra/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["sutra_compiler*"]

[tool.setuptools.package-data]
# Ship the .su standard-library source so the inliner can find it after install.
sutra_compiler = ["stdlib/*.su"]
