[package]
name = "sutra-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Triple storage engine, LSM indexes, IRI interning, RDF-star ID scheme"

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
serde = { workspace = true }
tracing.workspace = true
memmap2.workspace = true
xxhash-rust.workspace = true
sled.workspace = true
serde_json.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "triple_insert"
harness = false
